dashboard-ui/kubernetes/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard-ui
  template:
    metadata:
      labels:
        app: dashboard-ui
    spec:
      containers:
        - name: nginx
          image: derektaylor/dashboard-ui:0.1.0-4b45799
          ports:
            - containerPort: 80
