dashboard-ui/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-ui
spec:
  selector:
    app: dashboard-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
