dashboard-ui/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: dtaylor-us.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-ui
            port:
              number: 80
  tls:
  - hosts:
    - dtaylor-us.info
    secretName: dtaylor-us-info-tls
